@@ -157,6 +157,10 @@ done""" % in_dir)
     def wait_for_child_processes(self):
         return ("wait",)
 
+    def make_executable(self, filepath):
+        make_exec_command = " ".join( ("chmod a+x", filepath) )
+        return make_exec_command
+
 class DownloadTool_mac_curl(DownloadToolBase):
     def __init__(self, platformHelper):
         super(DownloadTool_mac_curl, self).__init__(platformHelper)
